include_directories(${CMAKE_CURRENT_SOURCE_DIR})

if (NOT WIN32)
    add_definitions (-fPIC)
endif (NOT WIN32)

add_library (png STATIC
    png.c
    pngerror.c
    pngget.c
    pngmem.c
    pngpread.c
    pngread.c
    pngrio.c
    pngrtran.c
    pngrutil.c
    pngset.c
    pngtrans.c
    pngwio.c
    pngwrite.c
    pngwtran.c
    pngwutil.c
)
